--- a/jazz.html
+++ b/jazz.html
@@ -32,55 +32,55 @@
       <a href="my-musics.html" class="header-favorite-songs">ΔΗΜΟΦΙΛΗ ΚΟΜΜΑΤΙΑ</a>
     </header>
     <main>
-        <section class="my_musics-img-container">
-            <h2>Άκου τα κομμάτια μου!</h2>
-        </section>
-        <div class="music-categories-container">
-          <p class="p-categories" id="jazz">Κατηγορίες:</p>
-          <ul class="music-categories">
-            <li><a href="hip-hop.html#hiphop">Hip-hop</a></li>
-            <li><a href="jazz.html#jazz">Jazz</a></li>
-            <li><a href="country.html#country">Country</a></li>
-            <li><a href="#">Pop</a></li>
-            <li><a href="#">Ballad</a></li>
-            <li><a href="#">Κλασσική</a></li>
-            <li><a href="#">Παραδοσιακή</a></li>
-          </ul>
+      <section class="my_musics-img-container">
+          <h2>Άκου τα κομμάτια μου!</h2>
+      </section>
+      <div class="music-categories-container">
+        <p class="p-categories" id="jazz">Κατηγορίες:</p>
+        <ul class="music-categories">
+          <li><a href="hip-hop.html#hiphop">Hip-hop</a></li>
+          <li><a href="jazz.html#jazz">Jazz</a></li>
+          <li><a href="country.html#country">Country</a></li>
+          <li><a href="#">Pop</a></li>
+          <li><a href="#">Ballad</a></li>
+          <li><a href="#">Κλασσική</a></li>
+          <li><a href="#">Παραδοσιακή</a></li>
+        </ul>
+      </div>
+      <hr />
+      <div class="music-videos-title-wrapper">
+        <h1>JAZZ</h1>
+      </div>
+      <section class="central-position">
+        <!-- TA PAIDIKA MOU CHRONIA SONG-->
+        <div class="music-title">
+          <div class="music-video-container">
+            <iframe class="iframe-music-videos" src="https://www.youtube.com/embed/ZSCwdcCekz4" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+          <p class="music-title"><span class="header-title">Τίτλος:</span><br />Τα παιδικά μου χρόνια<br />2011</p>
         </div>
-        <hr />
-        <div class="music-videos-title-wrapper">
-          <h1>JAZZ</h1>
+        <!-- ICHTHYES SONG-->
+        <div class="music-title">
+          <div class="music-video-container">
+            <iframe src="https://www.youtube.com/embed/IVPkkfeE8P0" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+          <p class="music-title"><span class="header-title">Τίτλος:</span><br />Ιχθύς<br />2017</p>
         </div>
-        <section class="central-position">
-          <!-- TA PAIDIKA MOU CHRONIA SONG-->
-          <div class="music-title">
-            <div class="music-video-container">
-              <iframe class="iframe-music-videos" src="https://www.youtube.com/embed/ZSCwdcCekz4" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-            <p class="music-title"><span class="header-title">Τίτλος:</span><br />Τα παιδικά μου χρόνια<br />2011</p>
+        <!-- PAPAROUNES SONG-->
+        <div class="music-title">
+          <div class="music-video-container">
+            <iframe src="https://www.youtube.com/embed/3fcNiDgsQLE" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
-          <!-- ICHTHYES SONG-->
-          <div class="music-title">
-            <div class="music-video-container">
-              <iframe class="iframe-music-videos" src="https://www.youtube.com/embed/IVPkkfeE8P0" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-            <p class="music-title"><span class="header-title">Τίτλος:</span><br />Ιχθύς<br />2017</p>
+          <p class="music-title"><span class="header-title">Τίτλος:</span><br />Παπαρούνες<br />2016</p>
+        </div>
+        <!-- TAKSIDI ME TO TRAINO SONG-->
+        <div class="music-title">
+          <div class="music-video-container">
+            <iframe src="https://www.youtube.com/embed/aZwpNyx8m6M" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
-          <!-- PAPAROUNES SONG-->
-          <div class="music-title">
-            <div class="music-video-container">
-              <iframe class="iframe-music-videos" src="https://www.youtube.com/embed/3fcNiDgsQLE" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-            <p class="music-title"><span class="header-title">Τίτλος:</span><br />Παπαρούνες<br />2016</p>
-          </div>
-          <!-- TAKSIDI ME TO TRAINO SONG-->
-          <div class="music-title">
-            <div class="music-video-container">
-              <iframe class="iframe-music-videos" src="https://www.youtube.com/embed/aZwpNyx8m6M" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-            <p class="music-title"><span class="header-title">Τίτλος:</span><br />Ταξίδι με το τρένο<br />2021</p>
-          </div>
-        </section>
+          <p class="music-title"><span class="header-title">Τίτλος:</span><br />Ταξίδι με το τρένο<br />2021</p>
+        </div>
+      </section>
     </main>
     <footer>
       <ul class="footer-first-ul">
