--- a/country.html
+++ b/country.html
@@ -49,15 +49,29 @@
       </div>
       <hr />
       <div class="music-videos-title-wrapper">
-        <h1>JAZZ</h1>
+        <h1>COUNTRY</h1>
       </div>
       <section class="central-position">
         <!-- IRTHE H ANOIKSH SONG -->
         <div class="music-title">
           <div class="music-video-container">
-            <iframe class="iframe-music-videos" src="https://www.youtube.com/embed/SAeBY0ljC-Y" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/SAeBY0ljC-Y" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
           <p class="music-title"><span class="header-title">Τίτλος:</span><br />Ήρθε η άνοιξη<br />2016</p>
+        </div>
+        <!-- PARADEISENIA ZOE STHN FARMA SONG -->
+        <div class="music-title">
+          <div class="music-video-container">
+            <iframe src="https://www.youtube.com/embed/rI5firZUcxU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+          <p class="music-title"><span class="header-title">Τίτλος:</span><br />Παραδεισένια ζωή στην φάρμα<br />2021</p>
+        </div>
+        <!-- ELIANTHOS SONG -->
+        <div class="music-title">
+          <div class="music-video-container">
+            <iframe src="https://www.youtube.com/embed/vTRzZFOk1xY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+          <p class="music-title"><span class="header-title">Τίτλος:</span><br />Ήλίανθος<br />2021</p>
         </div>
       </section>
     </main>
