--- a/hip-hop.html
+++ b/hip-hop.html
@@ -62,21 +62,21 @@
         <!-- PERIPATOS STO DASOS SONG-->
         <div class="music-title">
           <div class="music-video-container">
-            <iframe class="iframe-music-videos" src="https://www.youtube.com/embed/mLboVMCP9dE" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/mLboVMCP9dE" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
           <p class="music-title"><span class="header-title">Τίτλος:</span><br />Περίπατος στο δάσος<br />2021</p>
         </div>
         <!-- OMORFI ZOI SONG-->
         <div class="music-title">
           <div class="music-video-container">
-            <iframe class="iframe-music-videos" src="https://www.youtube.com/embed/aaKe_64GUKQ" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/aaKe_64GUKQ" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
           <p class="music-title"><span class="header-title">Τίτλος:</span><br />Όμορφη ζωή<br />2020</p>
         </div>
         <!-- NYCHTA STHN AMMO SONG-->
         <div class="music-title">
           <div class="music-video-container">
-            <iframe class="iframe-music-videos" src="https://www.youtube.com/embed/ARBMdyoeO1o" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/ARBMdyoeO1o" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
           <p class="music-title"><span class="header-title">Τίτλος:</span><br />Νύχτα στην άμμο<br />2021</p>
         </div>
