--- a/my-musics.html
+++ b/my-musics.html
@@ -38,10 +38,10 @@
           <li><a href="hip-hop.html#hiphop">Hip-hop</a></li>
           <li><a href="jazz.html#jazz">Jazz</a></li>
           <li><a href="country.html#country">Country</a></li>
-          <li><a href="#">Pop</a></li>
-          <li><a href="#">Ballad</a></li>
-          <li><a href="#">Κλασσική</a></li>
-          <li><a href="#">Παραδοσιακή</a></li>
+          <li><a href="pop.html#pop">Pop</a></li>
+          <li><a href="ballad.html#ballad">Ballad</a></li>
+          <li><a href="classical.html#classical">Κλασσική</a></li>
+          <li><a href="traditionally.html#traditionally">Παραδοσιακή</a></li>
         </ul>
       </div>
     </main>
