--- a/ballad.html
+++ b/ballad.html
@@ -6,7 +6,7 @@
     <meta name="description" content="This is a website containing music tracks by composer and musician producer PK.">
     <meta name="keywords" content="Music, jazz, hip-hop, country, pop, ballad, greece, producer, composer, greece, PK">
     <meta name="author" content="PK">
-    <title>PK | COUNTRY</title>
+    <title>PK | BALLAD</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="icon" type="image/png" href="images/PK_LOGO.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -36,7 +36,7 @@
           <h2>Άκου τα κομμάτια μου!</h2>
       </section>
       <div class="music-categories-container">
-        <p class="p-categories" id="country">Κατηγορίες:</p>
+        <p class="p-categories" id="ballad">Κατηγορίες:</p>
         <ul class="music-categories">
           <li><a href="hip-hop.html#hiphop">Hip-hop</a></li>
           <li><a href="jazz.html#jazz">Jazz</a></li>
@@ -49,36 +49,29 @@
       </div>
       <hr />
       <div class="music-videos-title-wrapper">
-        <h1>COUNTRY</h1>
+        <h1>BALLAD</h1>
       </div>
       <section class="central-position">
-        <!-- IRTHE H ANOIKSH SONG -->
+        <!-- MHN LYPASAI SONG -->
         <div class="music-title">
           <div class="music-video-container">
-            <iframe src="https://www.youtube.com/embed/SAeBY0ljC-Y" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe src="https://www.youtube.com/embed/PvJu9HYbkas" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
-          <p class="music-title"><span class="header-title">Τίτλος:</span><br />Ήρθε η άνοιξη<br />2016</p>
+          <p class="music-title"><span class="header-title">Τίτλος:</span><br />Μην λυπάσαι<br />2010</p>
         </div>
-        <!-- PARADEISENIA ZOE STHN FARMA SONG -->
+        <!-- O FILOS MOU O IHSOYS SONG -->
         <div class="music-title">
           <div class="music-video-container">
-            <iframe src="https://www.youtube.com/embed/rI5firZUcxU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe src="https://www.youtube.com/embed/4BUbtcA9Q_M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
-          <p class="music-title"><span class="header-title">Τίτλος:</span><br />Παραδεισένια ζωή στην φάρμα<br />2021</p>
+          <p class="music-title"><span class="header-title">Τίτλος:</span><br />Ο φίλος μου ο Ιησούς<br />2011</p>
         </div>
-        <!-- ELIANTHOS SONG -->
+        <!-- PROTOVROXI SONG -->
         <div class="music-title">
           <div class="music-video-container">
-            <iframe src="https://www.youtube.com/embed/vTRzZFOk1xY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe src="https://www.youtube.com/embed/zd6HyU_rHlQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
-          <p class="music-title"><span class="header-title">Τίτλος:</span><br />Ήλίανθος<br />2021</p>
-        </div>
-        <!-- POULAKIA SONG -->
-        <div class="music-title">
-          <div class="music-video-container">
-            <iframe src="https://www.youtube.com/embed/yVCrxATcAJE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          </div>
-          <p class="music-title"><span class="header-title">Τίτλος:</span><br />Πουλάκια<br />2021</p>
+          <p class="music-title"><span class="header-title">Τίτλος:</span><br />Πρωτοβρόχι<br />2012</p>
         </div>
       </section>
     </main>
