--- a/classical.html
+++ b/classical.html
@@ -6,7 +6,7 @@
     <meta name="description" content="This is a website containing music tracks by composer and musician producer PK.">
     <meta name="keywords" content="Music, jazz, hip-hop, country, pop, ballad, greece, producer, composer, greece, PK">
     <meta name="author" content="PK">
-    <title>PK | BALLAD</title>
+    <title>PK | CLASSICAL</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="icon" type="image/png" href="images/PK_LOGO.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
