--- a/traditionally.html
+++ b/traditionally.html
@@ -6,7 +6,7 @@
     <meta name="description" content="This is a website containing music tracks by composer and musician producer PK.">
     <meta name="keywords" content="Music, jazz, hip-hop, country, pop, ballad, greece, producer, composer, greece, PK">
     <meta name="author" content="PK">
-    <title>PK | BALLAD</title>
+    <title>PK | ΠΑΡΑΔΟΣΙΑΚΗ</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="icon" type="image/png" href="images/PK_LOGO.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -57,7 +57,7 @@
           <div class="music-video-container">
           <iframe src="https://www.youtube.com/embed/UdylCime-YU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
-          <p class="music-title"><span class="header-title">Τίτλος:</span><br /> Παναγιώτης απ' το Ορμένιο<br />2021</p>
+          <p class="music-title"><span class="header-title">Τίτλος:</span><br />Παναγιώτης απ' το Ορμένιο<br />2021</p>
         </div>
         <!-- FILE MOU GIORGO -->
         <div class="music-title">
@@ -65,6 +65,12 @@
           <iframe src="https://www.youtube.com/embed/Jt_jUYIiQEI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
           <p class="music-title"><span class="header-title">Τίτλος:</span><br />Φίλε μου Γιώργο<br />2021</p>
+        </div>
+        <!--O EVAISTHITOS PANAGIOTIS SONG -->
+        <div class="music-title">
+          <div class="music-video-container">
+          <iframe src="https://www.youtube.com/embed/5uMOuj07YZQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <p class="music-title"><span class="header-title">Τίτλος:</span><br />Ο ευαίσθητος Παναγιώτης<br />2021</p>
         </div>
       </section>
     </main>
