--- a/traditionally.html
+++ b/traditionally.html
@@ -62,15 +62,23 @@
         <!-- FILE MOU GIORGO -->
         <div class="music-title">
           <div class="music-video-container">
-          <iframe src="https://www.youtube.com/embed/Jt_jUYIiQEI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/Jt_jUYIiQEI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
           <p class="music-title"><span class="header-title">Τίτλος:</span><br />Φίλε μου Γιώργο<br />2021</p>
         </div>
         <!--O EVAISTHITOS PANAGIOTIS SONG -->
         <div class="music-title">
           <div class="music-video-container">
-          <iframe src="https://www.youtube.com/embed/5uMOuj07YZQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/5uMOuj07YZQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
           <p class="music-title"><span class="header-title">Τίτλος:</span><br />Ο ευαίσθητος Παναγιώτης<br />2021</p>
+        </div>
+        <!--MAKEDONOMAXOI SONG -->
+        <div class="music-title">
+          <div class="music-video-container">
+            <iframe src="https://www.youtube.com/embed/BH-EfZl7J_0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+          <p class="music-title"><span class="header-title">Τίτλος:</span><br />Μακεδονομάχοι<br />2021</p>
         </div>
       </section>
     </main>
