--- a/ballad.html
+++ b/ballad.html
@@ -73,6 +73,13 @@
           </div>
           <p class="music-title"><span class="header-title">Τίτλος:</span><br />Πρωτοβρόχι<br />2012</p>
         </div>
+        <!-- ΚΑΤΙ ΝΕΟ SONG -->
+        <div class="music-title">
+          <div class="music-video-container">
+          <iframe src="https://www.youtube.com/embed/blbC4ghp3BI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+          <p class="music-title"><span class="header-title">Τίτλος:</span><br />Κάτι νέο<br />2021</p>
+        </div>
       </section>
     </main>
     <footer>
