--- a/traditionally.html
+++ b/traditionally.html
@@ -52,6 +52,13 @@
         <h1>ΠΑΡΑΔΟΣΙΑΚΗ</h1>
       </div>
       <section class="central-position">
+        <!--KSIMEROMA SONG -->
+        <div class="music-title">
+          <div class="music-video-container">
+            <iframe src="https://www.youtube.com/embed/sL9BgC3uZMA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+          <p class="music-title"><span class="header-title">Τίτλος:</span><br />Ξημέρωμα<br />2011</p>
+        </div>
         <!-- PANAGIOTIS AP' TO ORMENIO SONG -->
         <div class="music-title">
           <div class="music-video-container">
