--- a/about.html
+++ b/about.html
@@ -38,11 +38,7 @@
           </section>
           <!-- <hr /> -->
           <p class="wrapper-paragraph">
-            Ονομάζομαι Παναγιώτης Κάργος, κατάγομαι από την Αλεξανδρούπολη και είμαι προπτυχιακός φοιτητής του Τμήματος Πληροφορικής του Πανεπιστημίου Δυτικής Μακεδονίας (Πρώην Τεχνολογικό Εκπαιδευτικό Ίδρυμα Δυτικής Μακεδονίας). Λόγω παύσης σπουδών στην σχολή λόγω υποχρεώσεων φοίτησα στο ΙΕΚ Αλεξανδρούπολης με ειδικότητα Τεχνικός Εφαρμογών Πληροφορικής όπου μου έχει απομείνει μόνο η πρακτική άσκηση. Η κύριά μου ενασχόληση είναι η κατασκευή - σύνθεσης μουσικής χρησιμοποιώ προς το παρών το πρόγραμμα Audacity (Φυσικά πολύ σύντομα θα αγοράσω επαγγελματικό πρόγραμμα με περισσότερες δυνατότητες) για τις ανάγκες μου και σκέφτομαι μακροπρόθεσμα να κινηθώ επαγγελματικά στον συγκεκριμένο χώρο. Κατέχω πιστοποίηση πολυμέσων, για την επεξεργασία βίντεο, ήχου, εικόνας όπως επίσης και για μαθήματα αρμονίου. Επίσης έχω συμμετάσχει σε διάφορες κοινωνικές εκδηλώσεις μουσικής κατα την διάρκεια των μαθημάτων μουσικής αρμονίου. Μου αρέσει συγκεκριμένα η <b>Jazz μουσική, η κλασσική, η βυζαντινή, κάποια techno, Hip hop, Εθνική μουσική, και η παραδοσιακή</b>. Επίσης ασχολούμε ενεργά με την ψαλτική τέχνη.
-            <br />
-            <br />
-            Για περισσότερες πληροφορίες μπορείτε να δείτε το ηλεκτρονικό βιογραφικό μου στο <a href="#">linkedin.</a><br />
-            <b>(Σύντομα θα δημιουργηθεί)</b>
+            Ονομάζομαι Παναγιώτης Κάργος, κατάγομαι από την Αλεξανδρούπολη και είμαι προπτυχιακός φοιτητής του Τμήματος Πληροφορικής του Πανεπιστημίου Δυτικής Μακεδονίας (Πρώην Τεχνολογικό Εκπαιδευτικό Ίδρυμα Δυτικής Μακεδονίας). Λόγω παύσης σπουδών στην σχολή λόγω υποχρεώσεων φοίτησα στο ΙΕΚ Αλεξανδρούπολης με ειδικότητα Τεχνικός Εφαρμογών Πληροφορικής όπου μου έχει απομείνει μόνο η πρακτική άσκηση. Η κύριά μου ενασχόληση είναι η κατασκευή - σύνθεση μουσικής χρησιμοποιώ το πρόγραμμα Audacity και FL Studio για τις ανάγκες μου και σκέφτομαι μακροπρόθεσμα να κινηθώ επαγγελματικά στον συγκεκριμένο χώρο. Κατέχω πιστοποίηση πολυμέσων για την επεξεργασία βίντεο, ήχου, εικόνας όπως επίσης και για μαθήματα αρμονίου. Επίσης, έχω συμμετάσχει σε διάφορες κοινωνικές εκδηλώσεις μουσικής κατά την διάρκεια των μαθημάτων μουσικής αρμονίου. Μου αρέσει, συγκεκριμένα, η <b>Jazz μουσική, η κλασσική, η βυζαντινή, κάποια techno, Hip hop, Εθνική μουσική, και η παραδοσιακή</b>. Επίσης, ασχολούμαι ενεργά με την ψαλτική τέχνη.
           </p>
         </div>
       </div>
