--- a/index.html
+++ b/index.html
@@ -48,12 +48,14 @@
            <br />
            H ιστοσελίδα έχει σαν σκοπό όλα αυτά που αναφέρονται παραπάνω, αλλά ποιο πολύ για την ψυχαγωγία, την ευεξία, την αναζωογόνηση, την χαλάρωση σας και το βασικότερο η επικοινωνία μαζί σας! Το περιεχόμενό μου δεν επιζητά χρηματικό κέρδος παρά μόνο την ψυχαγωγία και την δίψα για περισσότερη εκμάθηση!
            <br />
-           Σε αυτήν την σελίδα θα δεις τον καλλιτέχνη(εμένα δηλαδή), τα είδη μουσικής τα οποία έχει δημιουργήσει, οποιαδήποτε ενημέρωση καινούργια η οποία μπορεί να έχει αναρτηθεί εδώ σε κάποια ενότητα της ιστοσελίδας, και τέλος φυσικά το βιογραφικό του.
+           Σε αυτήν την σελίδα θα δεις τον καλλιτέχνη (εμένα δηλαδή), τα είδη μουσικής τα οποία έχει δημιουργήσει, οποιαδήποτε ενημέρωση καινούργια η οποία μπορεί να έχει αναρτηθεί εδώ σε κάποια ενότητα της ιστοσελίδας, και τέλος φυσικά το βιογραφικό του.
            <br />
-           Το παρών περιεχόμενό απευθύνεται, φυσικά, σε μουσικούς με χρόνια εμπειρία, ειδικότερα σε αυτούς που τους αρέσει να συνθέτουν δικά τους κομμάτια, έτσι ώστε να μου δώσουν και οι ίδιοι, ίσως, τις συμβουλές τους ή οποιαδήποτε άλλη άποψη επιθυμούν για τα κομμάτια που κοινοποιώ στην παροούσα σελίδα, αλλά και φυσικά, χαρά μου σε όλον τον κόσμο που θα έρθει εδώ για να ακούσει τα κομμάτια μου ή και για να με μάθει και μόνο!
+           Το παρόν περιεχόμενό απευθύνεται, φυσικά, σε μουσικούς με χρόνια εμπειρία, ειδικότερα σε αυτούς που τους αρέσει να συνθέτουν δικά τους κομμάτια, έτσι ώστε να μου δώσουν και οι ίδιοι, ίσως, τις συμβουλές τους ή οποιαδήποτε άλλη άποψη επιθυμούν για τα κομμάτια που κοινοποιώ στην παροούσα σελίδα, αλλά και φυσικά, χαρά μου σε όλον τον κόσμο που θα έρθει εδώ για να ακούσει τα κομμάτια μου ή και για να με μάθει και μόνο!
            <br />
            <br />
-           Τέλος, μη ξεχάσεις να πατήσεις στο αμέσως επόμενο σύνδεσμο για να επισκεφτείς και να ακούσεις τα κομμάτια μου, και να με ακολουθήσεις στην πλατφόρμα κοινωνικής δικτύωσης Linked In που θα βρεις κάτω δεξιά! <br />
+           Τέλος, μη ξεχάσεις να πατήσεις στο, αμέσως, επόμενο σύνδεσμο για να επισκεφτείς και να ακούσεις τα κομμάτια μου!
+           <br />
+           <br />
            <i>Εις το επανιδείν!</i>
         </p>
         <p class="wrapper-second-p"><a href="my-musics.html">ΔΗΜΟΦΙΛΗ ΤΡΑΓΟΥΔΙΑ</a></p>
