--- a/albums/beautiful_nature.html
+++ b/albums/beautiful_nature.html
@@ -37,7 +37,103 @@
             <!-- Basic Album Music Container-->
             <div class="music-album-container">
                 <!-- Title -->
-                <h1 class="heading" id="top">Under Costruction</h1>
+                <h1 class="heading" id="top">Beautiful Nature Album</h1>
+                <div class="music-container">
+                    <!-- 1. Compassion Song -->
+                    <div class="box">
+                        <!-- Background Image -->
+                        <div class="image">
+                            <h2>Compassion</h2>
+                            <p>2021</p>
+                        </div>
+                        <!-- Music -->
+                        <div class="music">
+                            <audio src="music-albums/7.beautiful-nature/1. Compassion.mp3"  controls
+                            controlsList="nodownload"></audio>
+                        </div>
+                    </div>
+                    <!-- 2. Up in the sky Song -->
+                    <div class="box">
+                        <!-- Background Image -->
+                        <div class="image">
+                            <h2>Up in the sky</h2>
+                            <p>2021</p>
+                        </div>
+                        <!-- Music -->
+                        <div class="music">
+                            <audio src="music-albums/7.beautiful-nature/2. Up in the sky.mp3"  controls
+                            controlsList="nodownload"></audio>
+                        </div>
+                    </div>
+                    <!-- 3. Panayiotis from Ormenio Song -->
+                    <div class="box">
+                        <!-- Background Image -->
+                        <div class="image">
+                            <h2>Panayiotis from Ormenio</h2>
+                            <p>2021</p>
+                        </div>
+                        <!-- Music -->
+                        <div class="music">
+                            <audio src="music-albums/7.beautiful-nature/3. Panayiotis from Ormenio.mp3"  controls
+                            controlsList="nodownload"></audio>
+                        </div>
+                    </div>
+                    <!-- 4. Sunflower Song -->
+                    <div class="box">
+                        <!-- Background Image -->
+                        <div class="image">
+                            <h2>Sunflower</h2>
+                            <p>2021</p>
+                        </div>
+                        <!-- Music -->
+                        <div class="music">
+                            <audio src="music-albums/7.beautiful-nature/4. Sunflower.mp3"  controls
+                            controlsList="nodownload"></audio>
+                        </div>
+                    </div>
+                    <!-- 5. Birds Song -->
+                    <div class="box">
+                        <!-- Background Image -->
+                        <div class="image">
+                            <h2>Birds</h2>
+                            <p>2021</p>
+                        </div>
+                        <!-- Music -->
+                        <div class="music">
+                            <audio src="music-albums/7.beautiful-nature/5. Birds.mp3"  controls
+                            controlsList="nodownload"></audio>
+                        </div>
+                    </div>
+                    <!-- 6. The sensetive Panayiotis Song -->
+                    <div class="box">
+                        <!-- Background Image -->
+                        <div class="image">
+                            <h2>The sensetive Panayiotis</h2>
+                            <p>2021</p>
+                        </div>
+                        <!-- Music -->
+                        <div class="music">
+                            <audio src="music-albums/7.beautiful-nature/6. The sensetive Panayiotis.mp3"  controls
+                            controlsList="nodownload"></audio>
+                        </div>
+                    </div>
+                    <!-- 7. Rose leaf Song -->
+                    <div class="box">
+                        <!-- Background Image -->
+                        <div class="image">
+                            <h2>Rose leaf</h2>
+                            <p>2021</p>
+                        </div>
+                        <!-- Music -->
+                        <div class="music">
+                            <audio src="music-albums/7.beautiful-nature/7. Rose leaf.mp3"  controls
+                            controlsList="nodownload"></audio>
+                        </div>
+                    </div>
+                    <div class="paragraph">
+                        <p>Click <a href="#top">here</a> to go top of the page.</p>
+                    </div>
+                </div>
             </div>
         </main>
         <!-- Footer Container -->
