--- a/albums/spring_came.html
+++ b/albums/spring_came.html
@@ -109,7 +109,7 @@
                     <div class="box">
                         <!-- Background Image -->
                         <div class="image">
-                            <h2>Hilaron Light</h2>
+                            <h2>Cheerful light</h2>
                             <p>2016</p>
                         </div>
                         <!-- Music -->
